--- a/GameZone/appsettings.json
+++ b/GameZone/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=GameZone333;Integrated Security=True;TrustServerCertificate=true;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=GameZone;Integrated Security=True;TrustServerCertificate=true;"
   }
 }
